--- a/springboot-web/src/main/resources/application.properties
+++ b/springboot-web/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=springboot-web
 server.port = 8090
+config.code=23232
+config.username=Felipe
+config.message=Hola soy felipe
+config.listOfValues=hola,soy,dev
