--- a/springboot-web/src/main/resources/values.properties
+++ b/springboot-web/src/main/resources/values.properties
@@ -1,4 +1,5 @@
 config.code=23232
 config.username=Felipe
-config.message=Hola soy felipe áéíóúñññ
+config.message=Hola soy felipe
 config.listOfValues=hola,soy,dev,pipé
+config.valuesMap={product: 'Cpu Intel Core i7 12th', description: 'Alder Lake, 12 core, a 5 GHz', price:'1000'}
